...
  }, [focus]);

  return (
    <TouchableWithoutFeedback onPress={Keyboard.dismiss}>
      <View style={styles.container}>
        <AppText size={24} weight={'bold'}>
          문자 인증번호 입력
        </AppText>
        <View
          style={[
            globalStyle.textInputContainer,
            { marginTop: toSize(24) },
            focused
              ? { borderColor: colors.Color2D2F30 }
              : { borderColor: colors.ColorE5E5E5 },
            warningMessage && { borderColor: colors.ColorEC0000 },
          ]}
        >
          <BottomSheetTextInput
            testID={'BottomSheetTextInput'}
            ref={ref}
            value={value}
            placeholder={'6자리 입력'}
            onFocus={() => setFocused(true)}
            onEndEditing={() => setFocused(false)}
            placeholderTextColor={colors.ColorC4C4C4}
...
