...
            <MyIcon
              size={toSize(39)}
              name={'keepit_logo'}
              color={colors.primary}
            />
            <AppText size={16} style={styles.guideLogo}>
              우리들만의 장소를 모으다
            </AppText>
          </View>
          <Image
            style={size ? styles.old : styles.new}
            source={images.welcomePic}
          />
...
          style={styles.start}
          onPress={() => {
            RootNavigation.navigate('RegisterScreen');
          }}
        >
          <AppText weight={'bold'} size={18} color={colors.white}>
            시작하기
          </AppText>
        </AppTouchable>
      </View>
      <View style={styles.loginContainer}>
        <AppText color={colors.Color6B6A6A}>이미 가입했어요.</AppText>
        <AppTouchable
...
