...
          <View style={styles.container}>
            <AppText
              size={24}
              weight={'bold'}
              style={{ marginTop: toSize(14) }}
            >
              휴대폰 번호로 로그인
            </AppText>
            <AppTextInput
              testID="login-input"
              boxStyle={{ marginTop: toSize(24) }}
              placeholder={'휴대폰 번호를 입력해 주세요.'}
              value={phoneNumber}
              onChangeText={(text) => {
                const num = text.replaceAll('-', '');
                setPhoneNumber(changePhoneNum(num));
...
